--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </ul>
       </div>
     </div>
-    <span class="copyright">&copy; Дмитрий Алексеев, 2016 &ndash; 2018</span>
+    <span class="copyright">&copy; Бойченко Алексей, 2020 &ndash; 2018</span>
   </footer>
 </body>
 
