--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 </head>
 
 <body>
+
+
+
   <header>
     <span class="flying__symbol">{ }</span>
     <span class="flying__symbol">#</span>
@@ -91,7 +94,7 @@
           </li>
         </ul>
 
-        <button type="button">Узнать стоимость</button>
+        <button class="first_section__button" type="button">Узнать стоимость</button>
       </div>
     </section>
     <section class="second__section" id="second">
@@ -178,8 +181,9 @@
         </ul>
       </div>
     </div>
-    <span class="copyright">&copy; Бойченко Алексей, 2020 &ndash; 2018</span>
+    <span class="copyright">&copy; Дмитрий Алексеев, 2016 &ndash; 2018</span>
   </footer>
+
 </body>
 
 </html>
