--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
 <body>
   <header>
-    <!-- <span class="flying__symbol">{ }</span>
+    <span class="flying__symbol">{ }</span>
     <span class="flying__symbol">#</span>
     <span class="flying__symbol">&lt;div&gt;</span>
     <span class="flying__symbol">&lt;div&gt;</span>
-    <span class="flying__symbol">&lt;/&gt;</span> -->
+    <span class="flying__symbol">&lt;/&gt;</span>
 
     <div class="fixed-container header">
       <div class="header__top">
