--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <header>
-    <span class="flying__symbol">{ }</span>
+    <!-- <span class="flying__symbol">{ }</span> -->
     <span class="flying__symbol">#</span>
     <span class="flying__symbol">&lt;div&gt;</span>
     <span class="flying__symbol">&lt;div&gt;</span>
