обновление ссылок на соц сети

--- a/index.html
+++ b/index.html
@@ -188,8 +188,18 @@
             Заказать звонок
           </button>
           <ul class="socials">
-            <li class="vk"><a href="#"></a></li>
-            <li class="fb"><a href="#"></a></li>
+            <li class="vk">
+              <a
+                target="_blank"
+                href="https://vk.com/share.php?url=http://lehersun.ru"
+              ></a>
+            </li>
+            <li class="fb">
+              <a
+                target="_blank"
+                href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse"
+              ></a>
+            </li>
             <li class="tw"><a href="#"></a></li>
             <li class="inst"><a href="#"></a></li>
           </ul>
