--- a/index.html
+++ b/index.html
@@ -1,211 +1,216 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
 
-    <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
-    <link rel="stylesheet" type="text/css" href="css/owl.theme.default.css" />
+<head>
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 
-    <link rel="stylesheet" type="text/css" href="css/css.css" />
-    <link rel="stylesheet" type="text/css" href="css/header.css" />
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="stylesheet" type="text/css" href="css/aside.css" />
-    <link rel="stylesheet" type="text/css" href="css/footer.css" />
-    <link rel="stylesheet" type="text/css" href="css/media.css" />
+  <meta charset="utf-8" />
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-    <script defer src="JS/jquery-3.5.1.min.js"></script>
-    <script defer src="JS/owl.carousel.js"></script>
-    <script defer src="JS/js.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
+  <link rel="stylesheet" type="text/css" href="css/owl.theme.default.css" />
 
-    <title>Рисование</title>
-  </head>
+  <link rel="stylesheet" type="text/css" href="css/css.css" />
+  <link rel="stylesheet" type="text/css" href="css/header.css" />
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <link rel="stylesheet" type="text/css" href="css/aside.css" />
+  <link rel="stylesheet" type="text/css" href="css/footer.css" />
+  <link rel="stylesheet" type="text/css" href="css/popup.css" />
+  <link rel="stylesheet" type="text/css" href="css/media.css" />
 
-  <body>
-    <header>
-      <span class="flying__symbol">{ }</span>
-      <span class="flying__symbol">#</span>
-      <span class="flying__symbol">&lt;div&gt;</span>
-      <span class="flying__symbol">&lt;div&gt;</span>
-      <span class="flying__symbol">&lt;/&gt;</span>
+  <script defer src="JS/jquery-3.5.1.min.js"></script>
+  <script defer src="JS/owl.carousel.js"></script>
+  <script defer src="JS/modernizr-custom.js"></script>
+  <script defer src="JS/jquery.mask.min.js"></script>
+  <script defer src="JS/disable-scroll.js"></script>
+  <script defer src="JS/js.js"></script>
+  <script defer src="JS/send.js"></script>
 
-      <div class="fixed-container header">
-        <div class="header__top">
-          <button
-            class="menu__button"
-            type="menu"
-            aria-label="Кнопка меню"
-          ></button>
 
-          <nav>
-            <ul class="menu">
-              <li><a href="#first">Услуги</a></li>
-              <li><a href="#second">Портфолио</a></li>
-              <li><a href="#aside">Стоимость</a></li>
-            </ul>
-          </nav>
+  <title>Дипломная работа Бойченко Алексея</title>
+</head>
 
-          <div class="header__top__right">
-            <a href="tel:+74999955577" class="phone__number"
-              >+7 (499) 995-55-77</a
-            >
-            <button class="call__button" type="button">
-              <span>Заказать звонок</span>
-            </button>
-          </div>
-        </div>
-        <div class="visual__container">
-          <div class="eclipse"></div>
+<body>
+  <div class="new-popup-background">
+    <div class="new-popup-window">
+      <form class="new-popup-window__form" action="https://formspree.io/mnqgyqjp" method="POST">
+        <label>* Номер телефона
+          <input class="new-popup-window__phone" type="text" name="guest_phone" placeholder="+7(123)456-78-90">
+        </label>
 
-          <div class="man_shade">
-            <div class="man"></div>
-          </div>
-        </div>
+        <label>* Имя
+          <input class="new-popup-window__name" name="guest_phone" placeholder="Джон" maxlength="30"></input>
+        </label>
 
-        <div class="header__text">
-          <span>Дмитрий Алексеев</span>
+        <button class="new-popup-window__send-button" type="submit" value="send">Заказать звонок</button>
+      </form>
+      <button class="new-popup-window__close-button" type="button" name="callback_window__close-button"></button>
+    </div>
+  </div>
+  <header>
+    <span class="flying__symbol">{ }</span>
+    <span class="flying__symbol">#</span>
+    <span class="flying__symbol">&lt;div&gt;</span>
+    <span class="flying__symbol">&lt;div&gt;</span>
+    <span class="flying__symbol">&lt;/&gt;</span>
 
-          <span class="myprofession"
-            >Frontend-разработчик и веб-верстальщик</span
-          >
+    <div class="fixed-container header">
+      <div class="header__top">
+        <button class="menu__button" type="menu" aria-label="Кнопка меню"></button>
 
-          <button class="show__more__button" type="button">
-            Узнать больше
-          </button>
-        </div>
-      </div>
-    </header>
-
-    <main>
-      <section class="first__section" id="first">
-        <div class="fixed-container">
-          <h1 class="my__skills">Что я делаю</h1>
-
-          <ul class="my__skills__list">
-            <li>
-              <a href="#"
-                >Верстка лендинг-страниц и&nbsp;сайтов&nbsp;любой сложности</a
-              >
-            </li>
-
-            <li>
-              <a href="#"
-                >Адаптивная вёрстка под все браузеры и&nbsp;устройства</a
-              >
-            </li>
-
-            <li><a href="#">Frontend-разработка и&nbsp;программирование</a></li>
-
-            <li>
-              <a href="#">Исправление и&nbsp;доработка существующей вёрстки</a>
-            </li>
-          </ul>
-
-          <button class="first_section__button" type="button">
-            Узнать стоимость
-          </button>
-        </div>
-      </section>
-      <section class="second__section" id="second">
-        <div class="fixed-container">
-          <h1>Примеры моих работ</h1>
-
-          <ul class="owl-carousel owl-theme examples">
-            <li>
-              <a href="#">
-                <img src="img/site1.png" alt="Сайт психолога Веры Антоновой" />
-                <span>Сайт психолога Веры Антоновой</span>
-              </a>
-            </li>
-
-            <li>
-              <a href="#">
-                <img src="img/site2.png" alt="Сайт магазина детской одежды" />
-                <span>Сайт магазина детской одежды</span>
-              </a>
-            </li>
-
-            <li>
-              <a href="#">
-                <img src="img/site3.png" alt="Сайт магазина Рыболов" />
-                <span>Сайт магазина &laquo;Рыболов&raquo;</span>
-              </a>
-            </li>
-
-            <li>
-              <a href="#">
-                <img src="img/site3.png" alt="Сайт магазина Рыболов" />
-                <span>Сайт магазина &laquo;Рыболов&raquo;</span>
-              </a>
-            </li>
-          </ul>
-
-          <button class="second__section__button">Заказать проект</button>
-        </div>
-      </section>
-    </main>
-
-    <aside id="aside">
-      <span class="aside__flying__symbols aside__symbol1">{ }</span>
-      <span class="aside__flying__symbols aside__symbol2">#</span>
-      <span class="aside__flying__symbols aside__symbol3">&lt;div&gt;</span>
-      <span class="aside__flying__symbols aside__symbol4">{ }</span>
-      <span class="aside__flying__symbols aside__symbol5">&lt;/&gt;</span>
-
-      <div class="fixed-container">
-        <span class="aside__text1">
-          Адаптивная вёрстка под все устройства и&nbsp;браузеры от
-          1000&nbsp;рублей всего за&nbsp;4&nbsp;часа.*
-        </span>
-
-        <span class="aside__text2">
-          * Срок и стоимость могут отличаться от заявленных и рассчитываются
-          индивидуально, в&nbsp;зависимости от сложности задач
-        </span>
-      </div>
-    </aside>
-
-    <footer>
-      <div class="footer fixed-container">
-        <nav class="footer__left">
-          <ul>
+        <nav>
+          <ul class="menu">
             <li><a href="#first">Услуги</a></li>
             <li><a href="#second">Портфолио</a></li>
             <li><a href="#aside">Стоимость</a></li>
           </ul>
         </nav>
-        <div class="footer__center">
-          <a href="tel:+74999955577" class="call-answer">+7 (499) 995-77-55</a>
-          <a href="mailto:dmitry@alekseev.com" class="envelope"
-            >dmitry@alekseev.com</a
-          >
-        </div>
-        <div class="footer__right">
-          <button type="button" class="footer__call__button">
-            Заказать звонок
+
+        <div class="header__top__right">
+          <a href="tel:+74999955577" class="phone__number">+7 (499) 995-55-77</a>
+          <button class="call__button" type="button">
+            <span>Заказать звонок</span>
           </button>
-          <ul class="socials">
-            <li class="vk">
-              <a
-                target="_blank"
-                href="https://vk.com/share.php?url=http://lehersun.ru"
-              ></a>
-            </li>
-            <li class="fb">
-              <a
-                target="_blank"
-                href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse"
-              ></a>
-            </li>
-            <li class="tw"><a href="#"></a></li>
-            <li class="inst"><a href="#"></a></li>
-          </ul>
         </div>
       </div>
-      <span class="copyright">&copy; Бойченко Алексей, 2020 &ndash; 2020</span>
-    </footer>
-  </body>
+      <div class="visual__container">
+        <div class="eclipse"></div>
+
+        <div class="man_shade">
+          <div class="man"></div>
+        </div>
+      </div>
+
+      <div class="header__text">
+        <span>Дмитрий Алексеев</span>
+
+        <span class="myprofession">Frontend-разработчик и веб-верстальщик</span>
+
+        <button class="show__more__button" type="button">
+          Узнать больше
+        </button>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section class="first__section" id="first">
+      <div class="fixed-container">
+        <h1 class="my__skills">Что я делаю</h1>
+
+        <ul class="my__skills__list">
+          <li>
+            <a href="#">Верстка лендинг-страниц и&nbsp;сайтов&nbsp;любой сложности</a>
+          </li>
+
+          <li>
+            <a href="#">Адаптивная вёрстка под все браузеры и&nbsp;устройства</a>
+          </li>
+
+          <li><a href="#">Frontend-разработка и&nbsp;программирование</a></li>
+
+          <li>
+            <a href="#">Исправление и&nbsp;доработка существующей вёрстки</a>
+          </li>
+        </ul>
+
+        <button class="first_section__button" type="button">
+          Узнать стоимость
+        </button>
+      </div>
+    </section>
+    <section class="second__section" id="second">
+      <div class="fixed-container">
+        <h1>Примеры моих работ</h1>
+
+        <ul class="owl-carousel owl-theme examples">
+          <li>
+            <a href="#">
+              <img src="img/site1.png" alt="Сайт психолога Веры Антоновой" />
+              <span>Сайт психолога Веры Антоновой</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#">
+              <img src="img/site2.png" alt="Сайт магазина детской одежды" />
+              <span>Сайт магазина детской одежды</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#">
+              <img src="img/site3.png" alt="Сайт магазина Рыболов" />
+              <span>Сайт магазина &laquo;Рыболов&raquo;</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#">
+              <img src="img/site3.png" alt="Сайт магазина Рыболов" />
+              <span>Сайт магазина &laquo;Рыболов&raquo;</span>
+            </a>
+          </li>
+        </ul>
+
+        <button class="second__section__button">Заказать проект</button>
+      </div>
+    </section>
+  </main>
+
+  <aside id="aside">
+    <span class="aside__flying__symbols aside__symbol1">{ }</span>
+    <span class="aside__flying__symbols aside__symbol2">#</span>
+    <span class="aside__flying__symbols aside__symbol3">&lt;div&gt;</span>
+    <span class="aside__flying__symbols aside__symbol4">{ }</span>
+    <span class="aside__flying__symbols aside__symbol5">&lt;/&gt;</span>
+
+    <div class="fixed-container">
+      <span class="aside__text1">
+        Адаптивная вёрстка под все устройства и&nbsp;браузеры от
+        1000&nbsp;рублей всего за&nbsp;4&nbsp;часа.*
+      </span>
+
+      <span class="aside__text2">
+        * Срок и стоимость могут отличаться от заявленных и рассчитываются
+        индивидуально, в&nbsp;зависимости от сложности задач
+      </span>
+    </div>
+  </aside>
+
+  <footer>
+    <div class="footer fixed-container">
+      <nav class="footer__left">
+        <ul>
+          <li><a href="#first">Услуги</a></li>
+          <li><a href="#second">Портфолио</a></li>
+          <li><a href="#aside">Стоимость</a></li>
+        </ul>
+      </nav>
+      <div class="footer__center">
+        <a href="tel:+74999955577" class="call-answer">+7 (499) 995-77-55</a>
+        <a href="mailto:dmitry@alekseev.com" class="envelope">dmitry@alekseev.com</a>
+      </div>
+      <div class="footer__right">
+        <button type="button" class="footer__call__button">
+          Заказать звонок
+        </button>
+        <ul class="socials">
+          <li class="vk">
+            <a target="_blank" href="https://vk.com/share.php?url=http://lehersun.ru"></a>
+          </li>
+          <li class="fb">
+            <a target="_blank"
+              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse"></a>
+          </li>
+          <li class="tw"><a href="#"></a></li>
+          <li class="inst"><a href="#"></a></li>
+        </ul>
+      </div>
+    </div>
+    <span class="copyright">&copy; Бойченко Алексей, 2020 &ndash; 2020</span>
+  </footer>
+</body>
+
 </html>
