--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script defer src="JS/owl.carousel.js"></script>
     <script defer src="JS/js.js"></script>
 
-    <title>Рис</title>
+    <title>Рисование</title>
   </head>
 
   <body>
